refactor: replace deprecated JDK reflection and AWT calls
- Class.newInstance() -> getDeclaredConstructor().newInstance() at the five
  plugin-loader sites whose methods already declare throws Exception, so the
  new ReflectiveOperationException subtypes are covered.
- MouseEvent's InputEvent.getModifiers() -> getModifiersEx() when
  reconstructing the translated event in JTreeTable.